Same example with checkboxes

--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -11,6 +11,7 @@
 				Cinema
 			</li>
 		</ul>
-		<a href="edit">Edit user hobbies</a>
+		<a href="editSelect">Edit user hobbies with a multiple select</a>
+		<a href="editCheckbox">Edit user hobbies with checkboxes</a>
 	</body>
 </html>
